// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CpsRelatedContent should render Top Stories components when given appropriate data 1`] = `
<DocumentFragment>
  .c12 {
  padding: 0.5rem 0 1rem;
}

.c12:last-child {
  border: none;
}

.c12:first-child {
  padding-top: 0;
}

.c12:last-child {
  padding-bottom: 0;
}

.c11 {
  list-style-type: none;
  margin: 0;
  padding: 0;
}

.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: row nowrap;
  -ms-flex-flow: row nowrap;
  flex-flow: row nowrap;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  min-height: 2.75rem;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
}

.c10 {
  font-size: 1.125rem;
  line-height: 1.375rem;
  font-family: Helmet,Freesans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  background-color: #FDFDFD;
  margin: 1rem 0;
  padding-right: 0.5rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c6 {
  border-top: 0.0625rem solid #AEAEB5;
  z-index: -1;
}

.c4 {
  position: relative;
  z-index: 0;
  color: #3F3F42;
  margin-top: 2rem;
}

.c7 {
  margin: 0;
  padding: 0;
}

.c3 {
  margin-bottom: 1rem;
  padding-bottom: 2rem;
}

.c5 {
  margin-top: 0;
}

.c14 {
  display: inline-block;
  vertical-align: top;
  width: 66.67%;
  padding: 0 0.5rem;
  width: 100%;
}

.c14 >div {
  vertical-align: middle;
}

.c14 >div {
  display: inline-block;
  vertical-align: initial;
}

.c14 svg {
  margin: 0;
}

.c13 {
  position: relative;
}

.c17 {
  font-size: 0.875rem;
  line-height: 1.125rem;
  color: #6E6E73;
  display: block;
  font-family: Helmet,Freesans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
}

.c15 {
  color: #222222;
  margin: 0;
  padding-bottom: 0.5rem;
  font-family: Helmet,Freesans,Helvetica,Arial,sans-serif;
  font-weight: 700;
  font-style: normal;
  font-size: 0.9375rem;
  line-height: 1.25rem;
  display: inline;
}

.c16 {
  position: static;
  color: #222222;
  -webkit-text-decoration: none;
  text-decoration: none;
  overflow-wrap: break-word;
  overflow-wrap: anywhere;
}

.c16:before {
  bottom: 0;
  content: '';
  left: 0;
  overflow: hidden;
  position: absolute;
  right: 0;
  top: 0;
  white-space: nowrap;
  z-index: 1;
}

.c16:hover,
.c16:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c16:visited {
  color: #6E6E73;
}

@media (max-width:62.9375rem) {
  .c12 {
    border-bottom: 0.0625rem solid #F2F2F2;
  }
}

@media (min-width:37.5rem) {
  .c12 {
    padding: 1rem 0 1rem;
  }
}

@media (min-width:63rem) {
  .c12 {
    padding: 0 0 1.5rem;
  }
}

@media (min-width:37.5rem) and (max-width:62.9375rem) {
  .c12:first-child {
    padding-top: 1rem;
  }
}

@media (min-width:37.5rem) {
  .c9 {
    -webkit-align-items: stretch;
    -webkit-box-align: stretch;
    -ms-flex-align: stretch;
    align-items: stretch;
  }
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c10 {
    font-size: 1.25rem;
    line-height: 1.5rem;
  }
}

@media (min-width:37.5rem) {
  .c10 {
    font-size: 1.5rem;
    line-height: 1.75rem;
  }
}

@media (min-width:37.5rem) {
  .c10 {
    margin: 0;
  }
}

@media (min-width:37.5rem) {
  .c10 {
    padding-right: 1rem;
  }
}

@media screen and (-ms-high-contrast:active) {
  .c6 {
    border-color: windowText;
  }
}

@media (min-width:37.5rem) {
  .c6 {
    position: absolute;
    left: 0;
    right: 0;
    top: 1.375rem;
  }
}

@media (min-width:37.5rem) {
  .c4 {
    margin-top: 1.5rem;
  }
}

@media (min-width:63rem) {
  .c4 {
    margin-bottom: 1.5rem;
  }
}

@supports (display:grid) {
  .c0 {
    display: grid;
    position: initial;
  }
}

@media (max-width:14.9375rem) {
  .c2 {
    padding: 0 0.5rem;
    margin-left: 0%;
  }
}

@media (min-width:15rem) and (max-width:24.9375rem) {
  .c2 {
    padding: 0 0.5rem;
    margin-left: 0%;
  }
}

@media (min-width:25rem) and (max-width:37.4375rem) {
  .c2 {
    padding: 0 1rem;
    margin-left: 0%;
  }
}

@media (min-width:37.5rem) and (max-width:62.9375rem) {
  .c2 {
    padding: 0 1rem;
    margin-left: 0%;
  }
}

@media (min-width:63rem) and (max-width:79.9375rem) {
  .c2 {
    margin-left: 16.666666666666668%;
  }
}

@media (min-width:80rem) {
  .c2 {
    margin-left: 33.333333333333336%;
  }
}

@supports (display:grid) {
  .c2 {
    display: block;
  }
}

@media (min-width:63rem) and (max-width:79.9375rem) {
  .c1 {
    margin: 0 auto;
    max-width: 63rem;
  }
}

@media (min-width:80rem) {
  .c1 {
    margin: 0 auto;
    max-width: 80rem;
  }
}

@media (min-width:37.5rem) {
  .c3 {
    margin-bottom: 1.5rem;
  }
}

@media (min-width:37.5rem) {
  .c14 {
    padding: 0 1rem;
  }
}

@media (min-width:63rem) {
  .c14 {
    display: block;
    width: 100%;
    padding: 0.5rem 0;
  }
}

@supports (grid-template-columns:fit-content(200px)) {
  .c14 {
    display: block;
    width: initial;
    padding: initial;
    grid-column: 3 / span 4;
    grid-column: 1 / span 6;
  }
}

@supports (grid-template-columns:fit-content(200px)) {
  .c13 {
    display: grid;
    grid-template-columns: repeat(6,1fr);
    grid-column-gap: 0.5rem;
  }
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c17 {
    font-size: 0.875rem;
    line-height: 1.125rem;
  }
}

@media (min-width:37.5rem) {
  .c17 {
    font-size: 0.8125rem;
    line-height: 1rem;
  }
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c15 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width:37.5rem) {
  .c15 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

<section
    aria-labelledby="top-stories-heading"
    class="c0 c1"
    data-e2e="top-stories-heading"
    dir="ltr"
    role="region"
  >
    <div
      class="c2 c3"
      dir="ltr"
    >
      <div
        class="c4 c5"
      >
        <div
          class="c6"
        />
        <h2
          class="c7"
        >
          <span
            class="c8"
          >
            <span
              class="c9"
            >
              <span
                class="c10"
                dir="ltr"
                id="top-stories-heading"
              >
                Top Tori
              </span>
            </span>
          </span>
        </h2>
      </div>
      <ul
        class="c11"
        role="list"
      >
        <li
          class="c12"
          role="listitem"
        >
          <div
            class="c13"
            data-e2e="story-promo"
          >
            <div
              class="c14"
              dir="ltr"
            >
              <h3
                class="c15"
              >
                <a
                  class="c16"
                  href="/mundo/noticias-internacional-51939501"
                >
                  China dice tener una vacuna contra el nuevo coronavirus lista para pruebas en humanos
                </a>
              </h3>
              <time
                class="c17"
                datetime="2020-02-03"
              >
                3rd February 2020
              </time>
            </div>
          </div>
        </li>
        <li
          class="c12"
          role="listitem"
        >
          <div
            class="c13"
            data-e2e="story-promo"
          >
            <div
              class="c14"
              dir="ltr"
            >
              <h3
                class="c15"
              >
                <a
                  class="c16"
                  href="/pidgin/tori-51945757"
                >
                  Nigeria don get five new cases of Coronavirus - See how e happun
                </a>
              </h3>
              <time
                class="c17"
                datetime="2020-02-03"
              >
                3rd February 2020
              </time>
            </div>
          </div>
        </li>
      </ul>
    </div>
  </section>
</DocumentFragment>
`;

exports[`CpsRelatedContent should render Top Stories components when without <ul> 1`] = `
<DocumentFragment>
  .c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: row nowrap;
  -ms-flex-flow: row nowrap;
  flex-flow: row nowrap;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  min-height: 2.75rem;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
}

.c10 {
  font-size: 1.125rem;
  line-height: 1.375rem;
  font-family: Helmet,Freesans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  background-color: #FDFDFD;
  margin: 1rem 0;
  padding-right: 0.5rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c6 {
  border-top: 0.0625rem solid #AEAEB5;
  z-index: -1;
}

.c4 {
  position: relative;
  z-index: 0;
  color: #3F3F42;
  margin-top: 2rem;
}

.c7 {
  margin: 0;
  padding: 0;
}

.c3 {
  margin-bottom: 1rem;
  padding-bottom: 2rem;
}

.c5 {
  margin-top: 0;
}

.c13 {
  display: inline-block;
  vertical-align: top;
  width: 66.67%;
  padding: 0 0.5rem;
  width: 100%;
}

.c13 >div {
  vertical-align: middle;
}

.c13 >div {
  display: inline-block;
  vertical-align: initial;
}

.c13 svg {
  margin: 0;
}

.c12 {
  position: relative;
}

.c16 {
  font-size: 0.875rem;
  line-height: 1.125rem;
  color: #6E6E73;
  display: block;
  font-family: Helmet,Freesans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
}

.c14 {
  color: #222222;
  margin: 0;
  padding-bottom: 0.5rem;
  font-family: Helmet,Freesans,Helvetica,Arial,sans-serif;
  font-weight: 700;
  font-style: normal;
  font-size: 0.9375rem;
  line-height: 1.25rem;
  display: inline;
}

.c15 {
  position: static;
  color: #222222;
  -webkit-text-decoration: none;
  text-decoration: none;
  overflow-wrap: break-word;
  overflow-wrap: anywhere;
}

.c15:before {
  bottom: 0;
  content: '';
  left: 0;
  overflow: hidden;
  position: absolute;
  right: 0;
  top: 0;
  white-space: nowrap;
  z-index: 1;
}

.c15:hover,
.c15:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c15:visited {
  color: #6E6E73;
}

@media (min-width:37.5rem) {
  .c9 {
    -webkit-align-items: stretch;
    -webkit-box-align: stretch;
    -ms-flex-align: stretch;
    align-items: stretch;
  }
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c10 {
    font-size: 1.25rem;
    line-height: 1.5rem;
  }
}

@media (min-width:37.5rem) {
  .c10 {
    font-size: 1.5rem;
    line-height: 1.75rem;
  }
}

@media (min-width:37.5rem) {
  .c10 {
    margin: 0;
  }
}

@media (min-width:37.5rem) {
  .c10 {
    padding-right: 1rem;
  }
}

@media screen and (-ms-high-contrast:active) {
  .c6 {
    border-color: windowText;
  }
}

@media (min-width:37.5rem) {
  .c6 {
    position: absolute;
    left: 0;
    right: 0;
    top: 1.375rem;
  }
}

@media (min-width:37.5rem) {
  .c4 {
    margin-top: 1.5rem;
  }
}

@media (min-width:63rem) {
  .c4 {
    margin-bottom: 1.5rem;
  }
}

@supports (display:grid) {
  .c0 {
    display: grid;
    position: initial;
  }
}

@media (max-width:14.9375rem) {
  .c2 {
    padding: 0 0.5rem;
    margin-left: 0%;
  }
}

@media (min-width:15rem) and (max-width:24.9375rem) {
  .c2 {
    padding: 0 0.5rem;
    margin-left: 0%;
  }
}

@media (min-width:25rem) and (max-width:37.4375rem) {
  .c2 {
    padding: 0 1rem;
    margin-left: 0%;
  }
}

@media (min-width:37.5rem) and (max-width:62.9375rem) {
  .c2 {
    padding: 0 1rem;
    margin-left: 0%;
  }
}

@media (min-width:63rem) and (max-width:79.9375rem) {
  .c2 {
    margin-left: 16.666666666666668%;
  }
}

@media (min-width:80rem) {
  .c2 {
    margin-left: 33.333333333333336%;
  }
}

@supports (display:grid) {
  .c2 {
    display: block;
  }
}

@media (min-width:63rem) and (max-width:79.9375rem) {
  .c1 {
    margin: 0 auto;
    max-width: 63rem;
  }
}

@media (min-width:80rem) {
  .c1 {
    margin: 0 auto;
    max-width: 80rem;
  }
}

@media (min-width:37.5rem) {
  .c3 {
    margin-bottom: 1.5rem;
  }
}

@media (min-width:37.5rem) and (max-width:62.9375rem) {
  .c11 {
    padding-top: 1rem;
  }
}

@media (min-width:63rem) {
  .c11 {
    padding-bottom: 1.5rem;
  }
}

@media (min-width:37.5rem) {
  .c13 {
    padding: 0 1rem;
  }
}

@media (min-width:63rem) {
  .c13 {
    display: block;
    width: 100%;
    padding: 0.5rem 0;
  }
}

@supports (grid-template-columns:fit-content(200px)) {
  .c13 {
    display: block;
    width: initial;
    padding: initial;
    grid-column: 3 / span 4;
    grid-column: 1 / span 6;
  }
}

@supports (grid-template-columns:fit-content(200px)) {
  .c12 {
    display: grid;
    grid-template-columns: repeat(6,1fr);
    grid-column-gap: 0.5rem;
  }
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c16 {
    font-size: 0.875rem;
    line-height: 1.125rem;
  }
}

@media (min-width:37.5rem) {
  .c16 {
    font-size: 0.8125rem;
    line-height: 1rem;
  }
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c14 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width:37.5rem) {
  .c14 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

<section
    aria-labelledby="top-stories-heading"
    class="c0 c1"
    data-e2e="top-stories-heading"
    dir="ltr"
    role="region"
  >
    <div
      class="c2 c3"
      dir="ltr"
    >
      <div
        class="c4 c5"
      >
        <div
          class="c6"
        />
        <h2
          class="c7"
        >
          <span
            class="c8"
          >
            <span
              class="c9"
            >
              <span
                class="c10"
                dir="ltr"
                id="top-stories-heading"
              >
                Top Tori
              </span>
            </span>
          </span>
        </h2>
      </div>
      <div
        class="c11"
      >
        <div
          class="c12"
          data-e2e="story-promo"
        >
          <div
            class="c13"
            dir="ltr"
          >
            <h3
              class="c14"
            >
              <a
                class="c15"
                href="/mundo/noticias-internacional-51939501"
              >
                China dice tener una vacuna contra el nuevo coronavirus lista para pruebas en humanos
              </a>
            </h3>
            <time
              class="c16"
              datetime="2020-02-03"
            >
              3rd February 2020
            </time>
          </div>
        </div>
      </div>
    </div>
  </section>
</DocumentFragment>
`;
